@@ -1,3 +1,9 @@
+Sun Sep  2 20:32:36 2001  Jonathan Blandford  <jrb@redhat.com>
+
+	* gtk/gtktreeview.c (gtk_tree_view_scroll_to_cell): patch from
+	vishnu@pobox.com (Joshua N Pritikin) to fix math and an assertion,
+	#59731
+
 Sun Sep  2 17:38:42 2001  Jonathan Blandford  <jrb@redhat.com>
 
 	* gtk/gtktreeview.c (gtk_tree_view_deleted): Patch from
